// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Container correctly with HOC 1`] = `<Connect(InjectIntl(withPropsOnChange(Signin))) />`;

exports[`should return props correctly with mapDispatchToProps 1`] = `
Object {
  "tryEnter": [Function],
}
`;

exports[`should return props correctly with mapStateToProps 1`] = `
Object {
  "errorMessage": "errorMessage",
}
`;
